main pom file update