@@ -6,14 +6,23 @@
 
     <groupId>com.crayu</groupId>
     <artifactId>sorting-machine</artifactId>
+    <packaging>pom</packaging>
     <version>1.0</version>
+
+    <modules>
+        <module>sorting</module>
+        <module>ui</module>
+        <module>statistics</module>
+        <module>generator</module>
+    </modules>
+
     <name>Sorting Machine</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -21,7 +30,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.5.3</version>
+            <version>2.5.6</version>
             <type>pom</type>
         </dependency>
 
@@ -29,13 +38,6 @@
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
             <version>1.2-groovy-2.5</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
@@ -48,14 +50,14 @@
         <plugin>
             <groupId>org.codehaus.gmavenplus</groupId>
             <artifactId>gmavenplus-plugin</artifactId>
-            <version>1.5</version>
+            <version>1.6.2</version>
             <executions>
                 <execution>
                     <goals>
                         <goal>addSources</goal>
                         <goal>addTestSources</goal>
                         <goal>compile</goal>
-                        <goal>testCompile</goal>
+                        <goal>compileTests</goal>
                     </goals>
                 </execution>
             </executions>
@@ -63,12 +65,44 @@
 
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.20</version>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
             <configuration>
-                <useSystemClassLoader>false</useSystemClassLoader>
+                <release>${java.version}</release>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.ow2.asm</groupId>
+                    <artifactId>asm</artifactId>
+                    <version>6.2</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.0</version>
+            <dependencies>
+                <dependency>
+                    <groupId>org.ow2.asm</groupId>
+                    <artifactId>asm</artifactId>
+                    <version>6.2</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.22.0</version>
+            <configuration>
+                <argLine>
+                    --illegal-access=permit
+                </argLine>
             </configuration>
         </plugin>
+
+
 
     </plugins>
 
